# TestStand-ESP-IDF

./: .gitignore  CMakeLists.txt  README.md
components/esp-idf-sx126x/: CMakeLists.txt  ra01s.c
main/: CMakeLists.txt  acquire.c  global.c  global.h  header.c  header.h  ignition.c  ignitor.c  main.c  save_send.c
main/sensors/: ads.c  max.c
