idf_component_register(SRCS main.c
                            sensors/ads.c
                            sensors/max.c
                            acquire.c
                            header.c
                            ignitor.c
                            save_send.c
                        INCLUDE_DIRS ".")
